Fix a few minor code smells
RISDEV-2028

Co-Authored-By: zechmeister <2386669+zechmeister@users.noreply.github.com>